# dep-update-3

./: README.md  pom.xml  pyproject.toml
.github/: dependabot.yml
app/: pyproject.toml
