[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[project]
name = "your_project_name"
version = "0.1.0"
description = "A brief description of your project"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
dependencies = [
    "alive-progress==3.1.5",
    "awsipranges = 0.3.3",
    "tzlocal==5.2"
]

[project.optional-dependencies]
dev = [
    "bandit==1.7.10",
    # ... other dev dependencies (shortened for brevity)
    "vulture==2.12"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.6.1"
mkdocs-git-revision-date-localized-plugin = "1.2.9"
mkdocs-material = "9.5.39"
mkdocs-material-extensions = "1.3.1"

#[tool.poetry.scripts]
#prowler = "prowler.__main__:prowler"

[tool.poetry.urls]
"Changelog" = "https://github.com/prowler-cloud/prowler/releases"
"Documentation" = "https://docs.prowler.cloud"
"Homepage" = "https://github.com/prowler-cloud/prowler"
"Issue tracker" = "https://github.com/prowler-cloud/prowler/issues"

[tool.poetry-version-plugin]
source = "init"

[tool.poetry_bumpversion.file."prowler/config/config.py"]
replace = 'prowler_version = "{new_version}"'
search = 'prowler_version = "{current_version}"'

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.pytest_env]
# For Moto and Boto3 while testing AWS
AWS_ACCESS_KEY_ID = 'testing'
AWS_DEFAULT_REGION = 'us-east-1'
AWS_SECRET_ACCESS_KEY = 'testing'
AWS_SECURITY_TOKEN = 'testing'
AWS_SESSION_TOKEN = 'testing'
