[project]
name = "your_project_name"
version = "0.1.0"
description = "A brief description of your project"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
dependencies = ["alive-progress==3.1.5", "awsipranges==0.3.3", "tzlocal==5.2"]

[project.optional-dependencies]
dev = ["bandit==1.7.10", "vulture==2.12"
]
[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
